# genai-toolbox

./: .gitignore  .golangci.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  README.md  alloydb_integration.cloudbuild.yaml  cloud_sql_integration.cloudbuild.yaml  go.mod  go.sum  index.html  index.xml  integration.cloudbuild.yaml  linkinator.config.json  llms-full.txt  llms.txt  main.go  offline-search-index.01cc8e64105d5c045cbf2932a7236c42.json  offline-search-index.0692b1adc04180cefc845898d88163e7.json  offline-search-index.29d9b1a87bf4bbcb8da12f07ddd21b2c.json  offline-search-index.6ab9278da690cab0d62e533f8d734134.json  offline-search-index.73475c83180d15a714e64344c3b5396d.json  offline-search-index.a9af1796f2652e5326e4e1dc82ba53cf.json  offline-search-index.b1c9e7fd01e2f2f270b8157dea67dcde.json  offline-search-index.b429f94f26362452ca692cb5efaeab3b.json  offline-search-index.fed91110e64c326559c05d106c42f72f.json  release.cloudbuild.yaml  sitemap.xml  versioned.release.cloudbuild.yaml
.ci/: continuous.release.cloudbuild.yaml  generate_release_table.sh  integration.cloudbuild.yaml  test_with_coverage.sh  versioned.release.cloudbuild.yaml
.github/: CODEOWNERS  blunderbuss.yml  header-checker-lint.yaml  labels.yaml  release-please.yml  renovate.json5  sync-repo-settings.yaml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cloud_build_failure_reporter.yml  docs_deploy.yaml  docs_preview_clean.yaml  docs_preview_deploy.yaml  link_checker.yaml  lint-langchain.yaml  (+7 more)
.hugo/: go.mod  hugo.toml  package-lock.json
about/: index.html  index.xml
categories/: index.html  index.xml
cmd/: BUILD  options.go  options_test.go  root.go  root_test.go
concepts/: index.html  index.xml
getting-started/: colab_quickstart.ipynb  index.html  index.xml
how-to/: index.html  index.xml
resources/: index.html  index.xml
samples/: index.html  index.xml
scss/: main.min.c2513d21bca611e03c194fdd71ac561fdc5440e3d5e3efda6e1a50fa996ed7cb.css
sdks/: index.html  index.xml
sdks/langchain/: DEVELOPER.md  README.md  integration.cloudbuild.yaml  pyproject.toml  requirements.txt
sdks/langchain/src/toolbox_langchain_sdk/: client.py  tools.py  utils.py
sdks/langchain/tests/: conftest.py  test_client.py  test_e2e.py  test_tools.py  test_utils.py
tags/: index.html  index.xml
tests/: alloydb_ai_nl_integration_test.go  alloydb_pg_integration_test.go  auth.go  auth_test.go  bigquery_integration_test.go  bigtable_integration_test.go  cloud_sql_mssql_integration_test.go  cloud_sql_mysql_integration_test.go  cloud_sql_pg_integration_test.go  common.go  common_test.go  dgraph.yaml  dgraph_integration_test.go  http_test.go  mssql_integration_test.go  mysql_integration_test.go  neo4j_integration_test.go  postgres_integration_test.go  server.go  server_test.go  source.go  source_test.go  spanner_integration_test.go  sqlite_integration_test.go  tool.go  tool_test.go
toolbox/: toolbox.go
(+781 files in other folders)
