[project]
name = "toolbox-langchain-sdk"
version="0.0.1"
description = "Python SDK for interacting with the Toolbox service with LangChain"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.2.23,<1.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "aiohttp>=3.8.6,<4.0.0",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/googleapis/genai-toolbox"
Repository = "https://github.com/googleapis/genai-toolbox.git"
"Bug Tracker" = "https://github.com/googleapis/genai-toolbox/issues"

[project.optional-dependencies]
test = [
    "black[jupyter]==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
    "pytest-asyncio==0.24.0",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "Pillow==10.4.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_incomplete_defs = true
